--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-webpack-plugin": "^3.2.0",
     "gatsby": "^4.18.0",
     "gatsby-plugin-algolia": "^0.26.0",
+    "gatsby-plugin-baidu-analytics": "^2.2.0",
     "gatsby-plugin-feed": "^4.17.0",
     "gatsby-plugin-google-analytics": "^4.17.0",
     "gatsby-plugin-html2amp": "^1.4.2",
