--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-plugin-styled-components": "^5.17.0",
     "gatsby-plugin-typography": "^4.17.0",
+    "gatsby-plugin-valine": "^1.0.2",
     "gatsby-remark-autolink-headers": "^5.18.0",
     "gatsby-remark-copy-linked-files": "^5.18.0",
     "gatsby-remark-external-links": "^0.0.4",
